# MineRadio-api

./: Cargo.toml  README.md  run-dev.ps1
.github/workflows/: ci.yml
assets/qq_sign/: loader.js  module.js
docs/: MIGRATION.md  PROVIDERS_API.md  PROVIDERS_TODO.md  PROVIDER_TS_AUDIT.md  SERVICES_PENDING.md  TODO.md  TS_API_SHAPES.md
src/: config.rs  main.rs  router.rs  server.rs  types.rs
src/http/: response.rs
src/parsers/: kugou.rs  lrc.rs  mod.rs  netease.rs  qq.rs  qqmusic.rs  soda.rs  soda_music.rs
src/parsers2/: kugou.rs  mod.rs  netease.rs  qqmusic.rs  soda_music.rs
src/providers/: error.rs  mod.rs  registry.rs
src/providers/kugou/: adapter.rs  client.rs  map.rs  mod.rs  model.rs
src/providers/netease/: adapter.rs  client.rs  crypto.rs  map.rs  mod.rs  model.rs
src/providers/qq/: adapter.rs  client.rs  map.rs  mod.rs  model.rs  sign.rs
src/providers/soda/: adapter.rs  client.rs  map.rs  mod.rs  model.rs
src/services/: audio_proxy.rs  auth_session.rs  cross_source_resolver.rs  diagnostics.rs  discover_home.rs  fallback.rs  health.rs  image_proxy.rs  mod.rs  netease_qr_login.rs  podcast.rs  qq_mqtt_login.rs  qq_qr_login.rs  qq_qr_login_mqtt.rs  shared_playlist_import.rs  sidecar_log.rs  soda_audio_proxy.rs  soda_qr_login.rs  weather_radio.rs
src/utils/: crypto.rs  mod.rs  podcast_analyzer.rs
src/utils/cryptors/: crypto.rs  krc.rs  mod.rs  netease.rs  qq.rs  qrc.rs
