[package]
name = "MineRadio-api"
version = "0.1.0"
edition = "2024"

[profile.dev]
opt-level = 0
debug = 0
incremental = true
codegen-units = 256
lto = false

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1

[dependencies]
aes = "0.8"
anyhow = "1"
async-tungstenite = { version = "0.29", default-features = false, features = ["tokio-runtime", "tokio-rustls-native-certs"] }
async-trait = "0.1"
axum = "0.8"
base64 = "0.22"
bytes = "1"
cbc = "0.1"
ctr = "0.9"
dotenvy = "0.15"
ecb = "0.1"
flate2 = "1"
futures = "0.3"
futures-util = "0.3"
md-5 = "0.10"
rand = "0.10"
regex = "1"
rumqttc = "0.25.1"
reqwest = { version = "0.12", features = ["json", "cookies", "stream", "rustls-tls"], default-features = false }
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
qrcode-generator = "5"
rquickjs = "0.12"
rsa = { version = "0.9", features = ["pem"] }
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
symphonia = { version = "0.6", default-features = false, features = ["mp3"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "json"] }
url = "2"
urlencoding = "2"
memchr = "2.8.3"
sha1 = "0.11.0"
hex = "0.4.3"
